Initial 1.21.1 porting attempt.
Almost nothing works anymore!!!

Main TODOs:
- Update networking code to use new system
- Replace NBTs with new component system